@@ -20,6 +20,8 @@ jsoup changelog
 
  * Fixed doctype tokeniser to allow whitespace between name and public identifier.
 
+ * Tweaked HTML output of closing script and style tags to not add an extraneous newline when pretty-printing.
+
 *** Release 1.6.1 [2011-Jul-02]
  * Fixed Java 1.5 compatibility.
    <https://github.com/jhy/jsoup/issues/103>
